# 2018-2019-DEV4-Labyrinth

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Changes.md  Difficultés rencontrées.md  Doxyfile  LICENCE.md  Labyrinth.pro  Labyrinth.pro.user.4.9-pre1  README.md  cppCheck.cppcheck  manifest.manifest  my.rc  resource.qrc
console/: console.pro
console/include/: consoleView.h
console/source/: consoleView.cpp
core/: core.pro  game.cpp  game.h  main_console.cpp  player.cpp
core/controller/: controller.pro
core/controller/include/: controller_console.h
core/controller/source/: controller_console.cpp
core/include/: board.h  colors.h  game.h  objectiveCard.h  objectivesTypes.h  player.h  tile.h  tileTypes.h
core/model/: model.pro
core/model/include/: board.h  game.h  insertSide.h  objectiveCard.h  objectivesTypes.h  player.h  position.h  tile.h
core/model/source/: board.cpp  game.cpp  objectiveCard.cpp  objectivesTypes.cpp  player.cpp  position.cpp  tile.cpp
core/source/: board.cpp  game.cpp  objectiveCard.cpp  player.cpp
doc/: Avertissements.md  Changes.md  Difficultés rencontrées.md  Différences.md  Estaimation.md  additionnal.css
gui/: gui.pro
src/: src.pro
src/console/: CMakeLists.txt  console.pro
src/console/include/: consoleView.h
src/console/source/: consoleView.cpp
src/core/: CMakeLists.txt  core.pro  mainConsole.cpp  mainGUI.cpp
src/core/controller/: CMakeLists.txt  controller.pro
src/core/controller/include/: controllerConsole.h  controllerGUI.h
src/core/controller/source/: controllerConsole.cpp  controllerGUI.cpp
src/core/model/: CMakeLists.txt  model.pro
src/core/model/include/: board.h  game.h  insertSide.h  objectiveCard.h  player.h  position.h  tile.h
src/core/model/source/: board.cpp  game.cpp  objectiveCard.cpp  player.cpp  position.cpp  tile.cpp
src/core/utils/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui.pro
src/gui/include/: askPlayerNameWindow.h  availableTile.h  boardView.h  clickableTile.h  guiView.h  insertButton.h  playerinfos.h  rulesWindow.h  tilePreviewer.h  welcomeWindow.h
src/gui/source/: askPlayerNameWindow.cpp  availableTile.cpp  boardView.cpp  clickableTile.cpp  guiView.cpp  insertButton.cpp  playerinfos.cpp  rulesWindow.cpp  tilePreviewer.cpp  welcomeWindow.cpp
test/: CMakeLists.txt  test.pro
test/Boost/: gameTest.cpp
test/Boost Test/: CMakeLists.txt  PositionTest.cpp  gameTest.cpp  test.cpp
test/Catch2 Test/: CMakeLists.txt  Catch2 Test.pro  boardTest.cpp  catch.hpp  gameTest.cpp  main.cpp  playerTest.cpp
test/QTest Test/: QTest Test.pro  tst_qt_test.cpp
